--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "node": "^18.20.5"
+    "mongoose": "^8.8.2",
+    "node": "^18.20.5",
+    "nodemon": "^3.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
