--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "node": "^18.20.5",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
